# library-build-manager

./: Cargo.toml  Dioxus.toml  README.md  next-steps.md  package-lock.json  package.json
assets/: main.css  tailwind.css
src/: logic.rs  main.rs  types.rs
src/components/: mod.rs  project_card.rs
src/pages/: home.rs  mod.rs  project_detail.rs  settings.rs
