[package]
name = "update-packages"
version = "0.1.0"
authors = ["juanpiece <juan@dd3tech.mx>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.3", features = ["desktop", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
rfd = "0.15"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
